fix: spacing for Multiselect inside of FormikForm

--- a/src/components/FormikForm/FormikForm.css
+++ b/src/components/FormikForm/FormikForm.css
@@ -110,7 +110,8 @@
     .bp3-input-ghost {
       font-size: 14px;
       line-height: 22px;
-      padding-top: 2px;
+      margin-top: 3px;
+      margin-bottom: 3px;
     }
 
     .bp3-tag-input .bp3-tag {
@@ -118,6 +119,7 @@
       line-height: 22px;
       font-size: 14px;
       margin-top: 3px;
+      margin-bottom: 3px;
     }
   }
 }
